# aevus

./: .bazelrc  .gitignore  BUILD  BUILD.bazel  LICENSE  MODULE.bazel  README.md  WORKSPACE  boost-headers.BUILD  conanbuildinfo.txt  conanfile.txt  conaninfo.txt  dependencies.bzl  gasket.cpp  gasket.flame  gasket.py  graph_info.json  hdrs.BUILD  libs.BUILD  local_hdrs.BUILD  local_libs.BUILD  opencl-headers.BUILD  opencl.BUILD  test.flame  tinyxml2-headers.BUILD  tinyxml2.BUILD  wxheaders.BUILD  wxwidgets.BUILD
cl/: BUILD  coloring.cl  iterate.cl  mapping.cl
conandeps/: conanfile.txt
conandeps/boost/: BUILD
conandeps/bzip2/: BUILD
conandeps/gmp/: BUILD  BUILD.bazel
conandeps/libbacktrace/: BUILD
conandeps/tinyxml2/: BUILD
res/: BUILD
src/: BUILD  aevus.cpp  color_params.hpp  colorer.cpp  colorer.hpp  complex_type.cpp  complex_type.h  complex_type.hpp  convert.cpp  diver.cpp  diver.hpp  flame.cpp  flame.h  flame.hpp  gasket.cpp  gasket.h  gasket.hpp  gmp.cpp  key_gasket.cpp  key_gasket.h  key_gasket.hpp  main.cpp  mobius.cpp  mobius.h  mobius.hpp  palette.cpp  palette.h  palette.hpp  scaler.cpp  scaler.hpp  sdf.cpp  sdf.h  sdf.hpp  searcher.cpp  searcher.hpp  shape.cpp  shape.hpp  transform.cpp  transform.h  xform.cpp  (+4 more)
src/clwrap/: BUILD  cl_arg.hpp  cl_buffer.hpp  cl_context.cpp  cl_context.hpp  cl_event.cpp  cl_event.hpp  cl_executable.cpp  cl_executable.hpp  cl_queue.cpp  cl_queue.hpp  opencl.cpp  opencl.hpp
src/core/: BUILD  color.cpp  color.hpp  content.hpp  custom_coefs.cpp  custom_coefs.hpp  flame.cpp  flame.hpp  gradient.cpp  gradient.hpp  palette.cpp  palette.hpp  preset_library.cpp  preset_library.hpp  serializable.cpp  serializable.hpp  variation.cpp  variation.hpp  xform.cpp  xform.hpp  (+2 more)
tinyxml2/: BUILD.bazel
wxfb/: BUILD  aevus.fbp  gen.sh
(+131 files in other folders)
