
load("@rules_cc//cc:defs.bzl", "cc_import", "cc_library")


cc_import(
    name = "tinyxml2_precompiled",
    static_library = "lib/libtinyxml2.a"
)


cc_library(
    name = "tinyxml2",
    
    hdrs = glob(["include/**"]),
    
    
    includes = ["include"],
    
    
    
    visibility = ["//visibility:public"],
    
    deps = [
    
    ":tinyxml2_precompiled",
    
    ],
    
)
